Google docs api - add logo and page structure

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,21 +18,28 @@
 
     <script>
 
-        setTimeout(location.reload.bind(location), 10000);
-       // let timeSecond = 5;
-       // let timeMinutes = 1e3 * timeSecond;
-       // function init() {
-       //     fetch("http://localhost:8080/show").then(data => {render(data)})
-       // }
-       //init()(setInterval(init, timeMinutes))
+        setTimeout(location.reload.bind(location), 15000);
+
     </script>
 
 </head>
 <body>
 
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid" style="height: 200px">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="https://www.infopraca.pl/logo/759352-2/v/170808121159" class="rounded" alt="Yieldbird Logo" height="100" width="240"/>
+            </div>
+            <div class="col-sm-8">
+                <h1>Lista nieobecnosci</h1>
+            </div>
 
-    <h2>Lista obecnosci</h2>
+
+
+        </div>
+    </div>
+
 
 </div>
 
