--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,12 +29,11 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
-                <img src="https://www.infopraca.pl/logo/759352-2/v/170808121159" class="rounded" alt="Yieldbird Logo" height="100" width="240"/>
+                <img src="../static/css/lologo.png" th:src="@{/css/logo.png}" class="rounded" alt="Yieldbird Logo" height="50" width="300"/>
             </div>
             <div class="col-sm-8">
-                <h1>Lista nieobecnosci</h1>
+                <h1>LISTA NIEOBECNOŚCI</h1>
             </div>
-
 
 
         </div>
@@ -47,27 +46,44 @@
     <div class="list-tab">
         <div class="row">
             <div class="col-sm-6">
-                <table class="table table-dark table-striped">
+                <table class="table table-striped">
+                    <thead>
                     <tr>
                         <th>
-                            <p th:text="'Wolne: ' + ${holidayCount}"/>
+                            <h2 th:text="'Wolne: ' + ${holidayCount}"/>
+                        </th>
+                        <th>
+                            <h2 th:text="'Do dnia: '"/>
                         </th>
                     </tr>
+                    </thead>
+                    <tbody>
                     <tr th:each="holiday : ${holidayList}">
                         <td th:text="${holiday.getName()}">Name</td>
+                        <td th:text="${holiday.getDate()}">Data</td>
                     </tr>
+                    </tbody>
                 </table>
             </div>
+
             <div class="col-sm-6">
-                <table class="table table-dark table-striped">
+                <table class="table table-striped">
+                    <thead>
                     <tr>
                         <th>
-                            <p th:text="'Zdalnie: ' + ${remoteCount}"/>
+                            <h2 th:text="'Zdalnie: ' + ${remoteCount}"/>
+                        </th>
+                        <th>
+                            <h2 th:text="'W dniu: '"/>
                         </th>
                     </tr>
+                    </thead>
+                    <tbody>
                     <tr th:each="remote : ${remoteList}">
                         <td th:text="${remote.getName()}">Name</td>
+                        <td th:text="${remote.getDate()}">Data</td>
                     </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
