--- a/src/main/resources/static/css/Layout.css
+++ b/src/main/resources/static/css/Layout.css
@@ -3,16 +3,32 @@
     text-align: center;
     border-radius: 20px;
 }
+
+table{
+
+}
+
 p, td, th, tr{
-    color: #b2b8c1;
+    color:#2f4f9b;
     text-align: center;
 }
 
 h2 {
+    color:#ee2b54;
     text-align: center;
+    font: bold 35px Arial, Helvetica, sans-serif;
+}
+
+h1{
+    color:#2f4f9b;
+    font: bold 37px Arial, Helvetica, sans-serif;
 }
 
 
 body{
- background-color: green;
+ background-color: transparent;
+}
+
+tr, td{
+    font: bold 30px Arial, Helvetica, sans-serif;
 }
